--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
+    "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bcrypt-nodejs": "0.0.3",
@@ -29,6 +29,7 @@
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "method-override": "^2.3.9",
+    "moment": "^2.18.1",
     "mongoose": "^4.10.7",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
@@ -39,6 +40,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "webpack": "^3.0.0"
   }
 }
